delay trailing-space-removal until config/variables are parsed

Move removal of trailing spaces from KateTextBuffer::load to
KateDocument::openFile, after config and variable parsing (which might tell
us not to remove trailing space!) has been performed. Note that the removal
also now goes into the undo stack; for now we're considering this a good
thing.

BUG: 239077

svn path=/trunk/KDE/kdelibs/kate/; revision=1158818